--- a/my-app/src/app/map/map.component.html
+++ b/my-app/src/app/map/map.component.html
@@ -1,1 +1,7 @@
-<p>map works!</p>
+
+<div class="row">
+    <div id="map"></div>
+    <div style="display: none;">
+        <div id="marker" title="Marker"></div>
+      </div>
+</div>
