--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -6,7 +6,7 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<style>
 
   h1,
   h2,
@@ -90,6 +90,7 @@
 <!-- Toolbar -->
 
     <app-datepipe></app-datepipe>
+    <app-drop-box></app-drop-box>
     
 
 <!---->
