--- a/my-app/src/app/datepipe/datepipe.component.css
+++ b/my-app/src/app/datepipe/datepipe.component.css
@@ -7,6 +7,8 @@
   top: 18px;
   right: 1250px;
   width: 300px;
+
+  
 }
 
 .toolbar {
@@ -21,3 +23,20 @@
   color: white;
   font-weight: 600;
 }
+
+/* .dropdown-content {
+
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+
+}
+
+option {
+  color: black;
+  padding: 12px 16px;
+  
+} */
+
+
