--- a/my-app/src/app/datepipe/datepipe.component.html
+++ b/my-app/src/app/datepipe/datepipe.component.html
@@ -1,17 +1,22 @@
 <div class="toolbar">
     <p>Uhrzeit: {{todayDate | date:'HH:mm'}} <br> Datum: {{todayDate| date:'dd.MM.yyy'}}</p>
 </div>
+
+
  
+<!--
 <div ng-app="demo" ng-controller="myCtrl" class="dropDown">
- 
-    <select>
-        <option >{{"Tag"}}</option>
-        <option selected>{{"Woche"}}</option>
-        <option >{{"Monat"}}</option>
+    
+        <select class="dropdown-content">
+            <option >{{"Tag"}}</option>
+            <option selected>{{"Woche"}}</option>
+            <option >{{"Monat"}}</option>
         </select>
-         
-        </div>
-         
+       
+</div>
+-->
+
+
         <script>
         var app = angular.module('demo', []);
         app.controller('myCtrl', function($scope) {
