--- a/my-app/src/app/drop-box/drop-box.component.css
+++ b/my-app/src/app/drop-box/drop-box.component.css
@@ -19,7 +19,7 @@ body {
     background: white;
     height: 35px;
     
-    color: blue;
+    color: #1976d2;
     font-weight: 200;
     display: flex;
     flex: 1;
@@ -75,19 +75,19 @@ body {
     width: 100%;
     margin: 0;
     margin-bottom: 5px;
-    background: tomato;
+    background: white;
     transition: background 3s;
     box-shadow: 2px 2px 10px -2px rgba(0,0,0,.35);
   }
   
   nav ul li:hover {
-    background: mediumorchid;
+    background: gray;
     transition: background .45s;
   }
   
   nav ul a {
     display: block;
-    color: ivory;
+    color: #1976d2;
     font-size: 18px;
     font-weight: 200;
     text-decoration: none;
